---
config:
  theme: dark
  layout: elk
---
erDiagram
	direction TB

	users {
		uuid id PK
		bool is_active
		varchar username
		varchar email
		varchar password_hash
		varchar phone
		timestamptz created_at
		timestamptz updated_at
	}

	auth_sessions {
		uuid id PK
		uuid user_id FK
		varchar refresh_token_hash
		varchar created_ip
		varchar created_user_agent
		varchar revoke_reason
		timestamptz revoked_at
		timestamptz created_at
		timestamptz expires_at
		uuid replaced_by FK
	}

	users||--o{auth_sessions:"has"
	auth_sessions||--o|auth_sessions:"replaced"